build_log.txt

> Task :compileJava FAILED
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:34: error: constructor WpiLogBackend in class org.areslib.telemetry.WpiLogBackend cannot be applied to given types;
        AresTelemetry.registerBackend(new WpiLogBackend());
                                      ^
  required: java.lang.String
  found: no arguments
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:45: error: no suitable constructor found for RevEncoderWrapper(com.qualcomm.robotcore.hardware.DcMotorEx)
                new RevEncoderWrapper(hardwareMap.get(DcMotorEx.class, "flDrive")),
                ^
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion) is not applicable
      (actual and formal argument lists differ in length)
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion,boolean) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:46: error: constructor AnalogAbsoluteEncoderWrapper in class org.areslib.hardware.wrappers.AnalogAbsoluteEncoderWrapper cannot be applied to given types;
                new AnalogAbsoluteEncoderWrapper(hardwareMap.get(AnalogInput.class, "flAbsolute"))
                ^
  required: com.qualcomm.robotcore.hardware.AnalogInput,double
  found: com.qualcomm.robotcore.hardware.AnalogInput
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:52: error: no suitable constructor found for RevEncoderWrapper(com.qualcomm.robotcore.hardware.DcMotorEx)
                new RevEncoderWrapper(hardwareMap.get(DcMotorEx.class, "frDrive")),
                ^
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion) is not applicable
      (actual and formal argument lists differ in length)
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion,boolean) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:53: error: constructor AnalogAbsoluteEncoderWrapper in class org.areslib.hardware.wrappers.AnalogAbsoluteEncoderWrapper cannot be applied to given types;
                new AnalogAbsoluteEncoderWrapper(hardwareMap.get(AnalogInput.class, "frAbsolute"))
                ^
  required: com.qualcomm.robotcore.hardware.AnalogInput,double
  found: com.qualcomm.robotcore.hardware.AnalogInput
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:59: error: no suitable constructor found for RevEncoderWrapper(com.qualcomm.robotcore.hardware.DcMotorEx)
                new RevEncoderWrapper(hardwareMap.get(DcMotorEx.class, "blDrive")),
                ^
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion) is not applicable
      (actual and formal argument lists differ in length)
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion,boolean) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:60: error: constructor AnalogAbsoluteEncoderWrapper in class org.areslib.hardware.wrappers.AnalogAbsoluteEncoderWrapper cannot be applied to given types;
                new AnalogAbsoluteEncoderWrapper(hardwareMap.get(AnalogInput.class, "blAbsolute"))
                ^
  required: com.qualcomm.robotcore.hardware.AnalogInput,double
  found: com.qualcomm.robotcore.hardware.AnalogInput
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:66: error: no suitable constructor found for RevEncoderWrapper(com.qualcomm.robotcore.hardware.DcMotorEx)
                new RevEncoderWrapper(hardwareMap.get(DcMotorEx.class, "brDrive")),
                ^
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion) is not applicable
      (actual and formal argument lists differ in length)
    constructor org.areslib.hardware.wrappers.RevEncoderWrapper.RevEncoderWrapper(java.util.function.DoubleSupplier,org.areslib.hardware.wrappers.RevEncoderWrapper.EncoderVersion,boolean) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:67: error: constructor AnalogAbsoluteEncoderWrapper in class org.areslib.hardware.wrappers.AnalogAbsoluteEncoderWrapper cannot be applied to given types;
                new AnalogAbsoluteEncoderWrapper(hardwareMap.get(AnalogInput.class, "brAbsolute"))
                ^
  required: com.qualcomm.robotcore.hardware.AnalogInput,double
  found: com.qualcomm.robotcore.hardware.AnalogInput
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\MainTeleOp.java:80: error: cannot find symbol
                driveSubsystem.drive(
                              ^
  symbol:   method drive(double,double,double)
  location: variable driveSubsystem of type org.areslib.subsystems.drive.DriveSubsystem
10 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 4s
1 actionable task: 1 executed
